@@ -37,7 +37,7 @@ import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
@@ -67,12 +67,11 @@ public class ElementUtil {
 	 *
 	 * @param workspace            The current workspace
 	 * @param dataList             The datalist from which to load the entries
-	 * @param sorted               Whether the list should be sorted alphabetically
 	 * @param typeFilter           If present, only entries whose type matches this parameter are loaded
 	 * @param customEntryProviders The string id of the mod element types that provide custom entries
 	 * @return All entries from the given data list and the given mod element types, matching the optional filter
 	 */
-	public static List<DataListEntry> loadDataListAndElements(Workspace workspace, String dataList, boolean sorted,
+	public static List<DataListEntry> loadDataListAndElements(Workspace workspace, String dataList,
 			@Nullable String typeFilter, @Nullable String... customEntryProviders) {
 		List<DataListEntry> retval = new ArrayList<>();
 
@@ -87,10 +86,9 @@ public class ElementUtil {
 		if (typeFilter != null) {
 			retvalStream = retvalStream.filter(typeMatches(typeFilter));
 		}
-		if (sorted) {
-			return retvalStream.filter(e -> e.isSupportedInWorkspace(workspace)).sorted().toList();
-		}
-		return retvalStream.filter(e -> e.isSupportedInWorkspace(workspace)).toList();
+		retval = retvalStream.filter(e -> e.isSupportedInWorkspace(workspace)).collect(Collectors.toList());
+		retval.sort(DataListEntry.getComparator(workspace, retval));
+		return retval;
 	}
 
 	/**
@@ -104,6 +102,7 @@ public class ElementUtil {
 	public static List<MCItem> loadBlocksAndItems(Workspace workspace) {
 		List<MCItem> elements = new ArrayList<>();
 		workspace.getModElements().forEach(modElement -> elements.addAll(modElement.getMCItems()));
+		elements.sort(MCItem.getComparator(workspace, elements)); // sort custom elements
 		elements.addAll(
 				DataListLoader.loadDataList("blocksitems").stream().map(e -> (MCItem) e).filter(MCItem::hasNoSubtypes)
 						.toList());
@@ -121,6 +120,7 @@ public class ElementUtil {
 	public static List<MCItem> loadBlocksAndItemsAndTags(Workspace workspace) {
 		List<MCItem> elements = new ArrayList<>();
 		workspace.getModElements().forEach(modElement -> elements.addAll(modElement.getMCItems()));
+		elements.sort(MCItem.getComparator(workspace, elements)); // sort custom elements
 		elements.addAll(DataListLoader.loadDataList("blocksitems").stream().map(e -> (MCItem) e).toList());
 		return elements.stream().filter(typeMatches("block", "item", "tag"))
 				.filter(e -> e.isSupportedInWorkspace(workspace)).collect(Collectors.toList());
@@ -135,6 +135,7 @@ public class ElementUtil {
 	public static List<MCItem> loadBlocks(Workspace workspace) {
 		List<MCItem> elements = new ArrayList<>();
 		workspace.getModElements().forEach(modElement -> elements.addAll(modElement.getMCItems()));
+		elements.sort(MCItem.getComparator(workspace, elements)); // sort custom elements
 		elements.addAll(
 				DataListLoader.loadDataList("blocksitems").stream().map(e -> (MCItem) e).filter(MCItem::hasNoSubtypes)
 						.toList());
@@ -151,6 +152,7 @@ public class ElementUtil {
 	public static List<MCItem> loadBlocksAndTags(Workspace workspace) {
 		List<MCItem> elements = new ArrayList<>();
 		workspace.getModElements().forEach(modElement -> elements.addAll(modElement.getMCItems()));
+		elements.sort(MCItem.getComparator(workspace, elements)); // sort custom elements
 		elements.addAll(DataListLoader.loadDataList("blocksitems").stream().map(e -> (MCItem) e).toList());
 		return elements.stream().filter(typeMatches("block", "block_without_item", "tag"))
 				.filter(e -> e.isSupportedInWorkspace(workspace)).collect(Collectors.toList());
@@ -186,22 +188,22 @@ public class ElementUtil {
 	}
 
 	public static List<DataListEntry> loadAllAchievements(Workspace workspace) {
-		return loadDataListAndElements(workspace, "achievements", false, null, "achievement");
+		return loadDataListAndElements(workspace, "achievements", null, "achievement");
 	}
 
 	public static List<DataListEntry> loadAllTabs(Workspace workspace) {
-		return loadDataListAndElements(workspace, "tabs", false, null, "tab");
+		return loadDataListAndElements(workspace, "tabs", null, "tab");
 	}
 
 	public static List<DataListEntry> loadAllBiomes(Workspace workspace) {
 		List<DataListEntry> biomes = getCustomElementsOfType(workspace, ModElementType.BIOME);
 		biomes.addAll(DataListLoader.loadDataList("biomes"));
-		Collections.sort(biomes);
+		biomes.sort(DataListEntry.getComparator(workspace, biomes));
 		return biomes;
 	}
 
 	public static List<DataListEntry> loadAllEnchantments(Workspace workspace) {
-		return loadDataListAndElements(workspace, "enchantments", false, null, "enchantment");
+		return loadDataListAndElements(workspace, "enchantments", null, "enchantment");
 	}
 
 	public static List<DataListEntry> loadMaterials() {
@@ -221,6 +223,7 @@ public class ElementUtil {
 			}
 		}
 		animations.addAll(DataListLoader.loadDataList("animations"));
+		animations.sort(DataListEntry.getComparator(workspace, animations));
 		return animations;
 	}
 
@@ -228,7 +231,7 @@ public class ElementUtil {
 		List<DataListEntry> retval = getCustomElements(workspace,
 				mu -> mu.getBaseTypesProvided().contains(BaseType.ENTITY));
 		retval.addAll(DataListLoader.loadDataList("entities"));
-		Collections.sort(retval);
+		retval.sort(DataListEntry.getComparator(workspace, retval));
 		return retval;
 	}
 
@@ -243,14 +246,14 @@ public class ElementUtil {
 		List<DataListEntry> retval = getCustomElements(workspace,
 				mu -> mu.getBaseTypesProvided().contains(BaseType.ENTITY));
 		retval.addAll(DataListLoader.loadDataList("entities").stream().filter(typeMatches("spawnable")).toList());
-		Collections.sort(retval);
+		retval.sort(DataListEntry.getComparator(workspace, retval));
 		return retval;
 	}
 
 	public static List<DataListEntry> loadCustomEntities(Workspace workspace) {
 		List<DataListEntry> retval = getCustomElements(workspace,
 				mu -> mu.getBaseTypesProvided().contains(BaseType.ENTITY));
-		Collections.sort(retval);
+		retval.sort(DataListEntry.getComparator(workspace, retval));
 		return retval;
 	}
 
@@ -268,23 +271,23 @@ public class ElementUtil {
 	}
 
 	public static List<DataListEntry> loadAllParticles(Workspace workspace) {
-		return loadDataListAndElements(workspace, "particles", false, null, "particle");
+		return loadDataListAndElements(workspace, "particles", null, "particle");
 	}
 
 	public static List<DataListEntry> loadAllPotionEffects(Workspace workspace) {
-		return loadDataListAndElements(workspace, "effects", false, null, "potioneffect");
+		return loadDataListAndElements(workspace, "effects", null, "potioneffect");
 	}
 
 	public static List<DataListEntry> loadAllPotions(Workspace workspace) {
-		return loadDataListAndElements(workspace, "potions", false, null, "potion");
+		return loadDataListAndElements(workspace, "potions", null, "potion");
 	}
 
 	public static List<DataListEntry> loadAllVillagerProfessions(Workspace workspace) {
-		return loadDataListAndElements(workspace, "villagerprofessions", false, null, "villagerprofession");
+		return loadDataListAndElements(workspace, "villagerprofessions", null, "villagerprofession");
 	}
 
 	public static List<DataListEntry> loadAllAttributes(Workspace workspace) {
-		return loadDataListAndElements(workspace, "attributes", false, null, "attribute");
+		return loadDataListAndElements(workspace, "attributes", null, "attribute");
 	}
 
 	/**
@@ -351,7 +354,8 @@ public class ElementUtil {
 			retval.add(NameMapper.MCREATOR_PREFIX + soundElement.getName());
 		}
 
-		retval.addAll(DataListLoader.loadDataList("sounds").stream().sorted().map(DataListEntry::getName).toList());
+		retval.addAll(DataListLoader.loadDataList("sounds").stream()
+				.sorted(Comparator.comparing(DataListEntry::getReadableName)).map(DataListEntry::getName).toList());
 
 		return retval.toArray(new String[0]);
 	}
